--- a/src/App.css
+++ b/src/App.css
@@ -41,7 +41,7 @@
   color: #888;
 } */
 
-/* body {
+body {
   font-family: Arial, sans-serif;
 }
 
@@ -91,4 +91,4 @@ button {
 
 button:hover {
   background-color: #ddd;
-}  */
+}
